bridge-web/infra/cd/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xbridge-frontend
  labels:
    app.kubernetes.io/name: xbridge-frontend
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gke-gateway-stg
      sectionName: https
  hostnames:
    - xbridge.zilstg.dev
  rules:
    - backendRefs:
        - name: xbridge-frontend
          port: 4173
